--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RED STORE</title>
-    <link rel="stylesheet" href="redstore.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -23,11 +24,12 @@
                         <li><a href="">Contact</a></li>
                         <li><a href="">Account</a></li>
                     </ul>
-                    <img src="https://rsanimesh.github.io/images/cart.png" alt="" width="30px" height="30px">
+                    <i class="fa-solid fa-bars bars"></i>
+                    <img class="shop-icon" src="https://rsanimesh.github.io/images/cart.png" alt="" width="30px" height="30px">
                 </nav>
             </div>
             <div class="row">
-                <div class="col2">
+                <div class="col2 header-col2">
                     <h1>Give Your Workout <br>A New Style </h1>
                     <p>Success isn't always about greatness. It's about consistency. Consistent <br>hard work gain success. Gretness will come.</p>
                     <a href="" class="btn">Explore Now &#8594</a>
@@ -245,7 +247,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <img src="https://rsanimesh.github.io/images/user-2.png" alt="">
+                <img class="mike" src="https://rsanimesh.github.io/images/user-2.png" alt="">
                 <h3>Mike Smith</h3>
             </div> <div class="col3">
                 <i class="fa-solid fa-quote-left icon"></i>
@@ -320,7 +322,7 @@
                 </div>
             </div>
             <hr>
-            <p class="copy">Copytight 2023 - MILAN TALAVIYA</p>
+            <p class="copy">Copytight 2023 - Red Store</p>
         </div>
     </div>
 </body>
